--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /packages
+/.vs
+/JobTestApp/obj/Debug
+/JobTestApp/bin/Debug
